--- a/location/src/main/resources/application.properties
+++ b/location/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=location
+
+spring.datasource.url=jdbc:h2:file:./locationdb
+spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
