Del lombok from models Add classic constructors and getters/setters Add different ports on properties

--- a/location/src/main/resources/application.properties
+++ b/location/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=location
+server.port = 8080
 
 spring.datasource.url=jdbc:h2:file:./locationdb
 spring.h2.console.enabled=true
