--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=weather
+server.port = 8082
 
 spring.datasource.url=jdbc:h2:file:./weatherdb
 spring.h2.console.enabled=true
