--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=weather
 server.port = 8082
 
-spring.datasource.url=jdbc:h2:file:./weatherdb
-spring.h2.console.enabled=true
+weather.app_id=d805166701009c96a355d4802cc401e4
+weather.base_url = https://api.openweathermap.org/data/2.5/weather
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.cache.caffeine.spec = expireAfterWrite=60s
