--- a/location/src/main/resources/application.properties
+++ b/location/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=location
-server.port = 8080
+server.port = 8083
 
 spring.datasource.url=jdbc:h2:file:./locationdb
 spring.h2.console.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+weather.base_url = http://localhost:8082/weather
