Task 5_8 is complete

--- a/location/src/main/resources/application.properties
+++ b/location/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=location
+spring.application.name=location-info-service
 server.port = 8083
 
 spring.datasource.url=jdbc:h2:file:./locationdb
@@ -7,4 +7,4 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-weather.base_url = http://localhost:8082/weather
+weather.base_url = http://weather-info-service/weather
