--- a/person/src/main/resources/application.properties
+++ b/person/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=person
+spring.application.name=person-service
 server.port = 8081
 
 spring.datasource.url=jdbc:h2:file:./persondb
@@ -6,3 +6,5 @@ spring.h2.console.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+location.weather.base_url=http://location-info-service/location/weather
