--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=weather
+spring.application.name=weather-info-service
 server.port = 8082
 
 weather.app_id=d805166701009c96a355d4802cc401e4
